# octave_boost

./: .gitignore  CITATION  DESCRIPTION  INDEX  NEWS  README.md  octave_boost.metainfo.xml
.github/workflows/: build-and-publish.yml
docs/: index.html
inst/: demo_boost_accumulators.m  demo_boost_date_time.m  demo_boost_thread.m
src/: Makefile  Makefile.in  boost_accumulators_coherent_tail_mean.cc  boost_accumulators_count.cc  boost_accumulators_covariance.cc  boost_accumulators_density.cc  boost_accumulators_error_of_mean.cc  boost_accumulators_extended_p_square.cc  boost_accumulators_extended_p_square_quantile_and_variants.cc  boost_accumulators_kurtosis.cc  boost_accumulators_max.cc  boost_accumulators_mean_and_variants.cc  boost_accumulators_median_and_variants.cc  boost_accumulators_min.cc  boost_accumulators_moment.cc  boost_accumulators_non_coherent_tail_mean.cc  boost_accumulators_non_coherent_weighted_tail_mean.cc  boost_accumulators_p_square_cumulative_distribution.cc  boost_accumulators_p_square_quantile_and_variants.cc  boost_accumulators_peaks_over_threshold_and_variants.cc  boost_accumulators_pot_quantile_and_variants.cc  boost_accumulators_pot_tail_mean.cc  boost_accumulators_skewness.cc  boost_accumulators_sum_and_variants.cc  boost_accumulators_tail.cc  boost_accumulators_tail_quantile.cc  boost_accumulators_tail_variate.cc  boost_accumulators_tail_variate_means_and_variants.cc  boost_accumulators_variance_and_variants.cc  boost_accumulators_weighted_covariance.cc  boost_accumulators_weighted_density.cc  boost_accumulators_weighted_extended_p_square.cc  boost_accumulators_weighted_kurtosis.cc  boost_accumulators_weighted_mean_and_variants.cc  boost_accumulators_weighted_median_and_variants.cc  boost_accumulators_weighted_moment.cc  boost_accumulators_weighted_p_square_cumulative_distribution.cc  boost_accumulators_weighted_p_square_quantile_and_variants.cc  boost_accumulators_weighted_peaks_over_threshold_and_variants.cc  boost_accumulators_weighted_skewness.cc  (+197 more)
